On the road to 2024.06:
setup:
- added user management
- added Swap file support
- fixed btrfs subvolume selection
- fixed bcachefs menu cancellation
- added more description to menu points
- added < and > menu points to show direction of navigation
- disabled dangerous Raid5/6 in btrfs menu
- fixed error messages in mountpoints function
---
2024.05 Highlights:
- kernel 6.9.x
- neovim 0.10.x
- OpenSSH public key support
Environment:
- removed OpenSSH empty password root login
- implemented OpenSSH public key login
setup:
- fixed BIOS/MBR dos and UEFI gpt device check
- added bcachefs multi device support
---
2024.04 Highlights:
- fedora shim 15.8
- bootloader cleanup
- hwdetect 2024.04.14
Environment:
- removed mkfs.ext2 and fsck.ext2
- added basic tree-sitter neovim plugins
- added argon2 to environment
- fixed ttyd bash login
Basic Setup:
- fixed abort dialog
setup:
- cleanup hwdetect code
- added early userspace busybox or systemd option
- added systemd-auto-generator support
- added XBOOTLDR partition only with vfat
- removed /efi to /boot synchronisation
- as Lennart Poettering proposes:
  -> only allow vfat on /efi (ESP) and /boot (XBOOTLDR)
- removed ext2 support
- added bootctl to install systemd-boot
- removed not needed grub-install options
- added refind-install for refind installation
- added refind-install for refind update hook
- added NVRAM entry for systemd-boot with bootctl
- added NVRAM entry for grub creation with grub-install
- added NVRAM entry for refind creation with refind-install
- removed not needed efibootmgr calls
---
2024.03 Highlights:
- kernel 6.8.x
- pacman release 6.1
- mkinitcpio release v38
- plasma release 6
Environment:
- retrigger module loading on soft-reboot
- fixed missing ln binary
- fixed plasma 6 application menu
- removed fatresize, gpart, gptfdisk, parted, wipe and weechat
- added new background
setup:
- removed microcode lines from bootloader config files
- switched partitioning to sfdisk usage