@@ -17,7 +17,7 @@
 <h1>Archboot Home | <a href="https://archboot.com/gallery.html">Gallery</a> | <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=Z7GXKW4MKHK7C"><img src="donate.png" alt="Donate"></a></h1>
 <h2>2024 Fundraise: 0% <progress max="100" value="20">0%</progress> 100%</h2>
 <p><strong>&copy; 2006 - 2024 | <a href=mailto:tpowa@archlinux.org>Tobias Powalowski</a></strong> | Arch Linux Developer <strong><a href="https://archlinux.org/people/developers/#tpowa">tpowa</a></strong><br>
-<strong>Last update: 06.06.2024 15:07</strong></p>
+<strong>Last update: 07.06.2024 06:49</strong></p>
 <nav id="TOC" role="doc-toc">
 <ul>
 <li><a href="#introduction" id="toc-introduction"><strong><span class="toc-section-number">1.</span> Introduction</strong></a></li>
@@ -723,24 +723,29 @@ The calculated size to boot the image follows the formula:<br>
 <td class="MyYes">&#10004;</td>
 </tr>
 <tr class="odd">
-<td>Mobile broadband modem<br>management service (modemmanager)</td>
+<td><a href="https://wiki.archlinux.org/title/Mobile_broadband_modem title="Accessibility"><strong>Mobile broadband modem</strong></a><br>management service (modemmanager)</td>
 <td class="MyNo">&#10006;</td>
 <td class="MyYes">&#10004;</td>
 </tr>
 <tr class="odd">
-<td>EXT2/3, F2FS, JFS, NILFS support </td>
+<td>EXT2/3, F2FS, JFS, NILFS support</td>
 <td class="MyNo">&#10006;</td>
 <td class="MyYes">&#10004;</td>
 </tr>
 <tr class="even">
-<td>BCACHEFS support</td>
-<td class="MyYes">&#10006;</td>
-<td class="MyNo">&#10004;</td>
+<td><a href="https://wiki.archlinux.org/title/Bcachefs" title="BCACHEFS"><strong>BCACHEFS</strong></a> support</td>
+<td class="MyYes">&#10004;</td>
+<td class="MyNo">&#10006;</td>
 </tr>
 <tr class="odd">
-<td>Swap File Support</td>
-<td class="MyYes">&#10006;</td>
-<td class="MyNo">&#10004;</td>
+<td><a href="https://wiki.archlinux.org/title/Swap" title="Swap"><strong>Swap</strong></a> File Support</td>
+<td class="MyYes">&#10004;</td>
+<td class="MyNo">&#10006;</td>
+</tr>
+<tr class="odd">
+<td>Default <a href="https://wiki.archlinux.org/title/Shell" title="Shell"><strong>Shell</strong></a> Switch<br><a href="https://wiki.archlinux.org/title/Bash" title="Bash"><strong>Bash</strong></a> or <a href="https://wiki.archlinux.org/title/Zsh" title="Zsh"><strong>Zsh</strong></a></td>
+<td class="MyYes">&#10004;</td>
+<td class="MyNo">&#10006;</td>
 </tr>
 <tr>
 <tr class="odd">
